Update docker-entrypoint.sh